composer.json smarty aufgenommen

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
     ],
 	"require": {
 		"php": ">=7.0",
-		"sergeytsalkov/meekrodb": "dev-master#8e19d9d6c331b9c5d8b90630b70b20f65dc0b903"
+		"sergeytsalkov/meekrodb": "dev-master#8e19d9d6c331b9c5d8b90630b70b20f65dc0b903",
+		"smarty/smarty": "~3.1",
+        "smarty-gettext/smarty-gettext": "^1.6"
 	}
 }
