adding rewrite rules for nginx trying to resovle #25

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,4 +15,56 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
+
+    location / {
+        rewrite (js|css|img|fonts)/(.*) /$1/$2;
+    }
+    location = /index {
+        rewrite ^(.*)$ /index.php break;
+    }
+    location /index {
+        rewrite ^/index/editItem=([0-9]+)$ /index.php?editItem=$1 break;
+    }
+    location = /items {
+        rewrite ^(.*)$ /inventory.php break;
+    }
+    location = /items/new {
+        rewrite ^(.*)$ /index.php break;
+    }
+    location = /inventory {
+        rewrite ^(.*)$ /inventory.php break;
+    }
+    location = /categories {
+        rewrite ^(.*)$ /categories.php break;
+    }
+    location /categories {
+        rewrite ^/categories(\?.*)$ /categories.php$1 break;
+        rewrite ^/categories/([0-9]+)$ /inventory.php?category=$1 break;
+    }
+    location = /transfer {
+        rewrite ^(.*)$ /transfer.php break;
+    }
+    location = /datafields {
+        rewrite ^(.*)$ /datafields.php break;
+    }
+    location = /settings {
+        rewrite ^(.*)$ /settings.php break;
+    }
+    location /settings {
+        rewrite ^/settings/editUser=([0-9])+$ /settings.php/editUser=$1 break;
+        rewrite ^/settings/removeUser=([0-9])+$ /settings.php/removeUser=$1 break;
+        rewrite ^/settings\?addUser$ /settings.php?addUser break;
+    }
+    location = /login {
+        rewrite ^(.*)$ /login.php break;
+    }
+    location /login {
+        rewrite ^/login/activate=(.*)+$ /login.php/activate=$1 break;
+    }
+    location = /subcategories {
+        rewrite ^(.*)$ /subcategories.php;
+    }
+    location /subcategories {
+        rewrite ^/subcategories/([0-9]+)$ /inventory.php?subcategory=$1 break;
+    }
 }
