Updating routing for nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,8 +4,6 @@ server {
     access_log /var/log/nginx/access.log;
     root /app;
 
-    rewrite ^/(inventory|categories|transfer|settings|datafields)$ /$1.php?$args;
-
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -16,55 +14,73 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
-    location / {
-        rewrite (js|css|img|fonts)/(.*) /$1/$2;
-    }
     location = /index {
-        rewrite ^(.*)$ /index.php break;
+		rewrite ^/index(.*)$ /index.php$1 last;
+	}
+
+	location /index {
+        rewrite ^/index/editItem=([0-9]+)$ /index.php?editItem=$1 last;
     }
-    location /index {
-        rewrite ^/index/editItem=([0-9]+)$ /index.php?editItem=$1 break;
-    }
+
     location = /items {
-        rewrite ^(.*)$ /inventory.php break;
+        rewrite ^(.*)$ /inventory.php last;
     }
+
     location = /items/new {
-        rewrite ^(.*)$ /index.php break;
+        rewrite ^(.*)$ /index.php last;
     }
+
     location = /inventory {
-        rewrite ^(.*)$ /inventory.php break;
+        rewrite ^(.*)$ /inventory.php last;
     }
+
     location = /categories {
-        rewrite ^(.*)$ /categories.php break;
+        rewrite ^(.*)$ /categories.php last;
     }
+
     location /categories {
-        rewrite ^/categories(\?.*)$ /categories.php$1 break;
-        rewrite ^/categories/([0-9]+)$ /inventory.php?category=$1 break;
+        rewrite ^/categories(\?.*)$ /categories.php$1 last;
+        rewrite ^/categories/([0-9]+)$ /inventory.php?category=$1 last;
     }
+
     location = /transfer {
-        rewrite ^(.*)$ /transfer.php break;
+        rewrite ^(.*)$ /transfer.php last;
     }
+
     location = /datafields {
-        rewrite ^(.*)$ /datafields.php break;
+        rewrite ^(.*)$ /datafields.php last;
     }
+
     location = /settings {
-        rewrite ^(.*)$ /settings.php break;
+        rewrite ^(.*)$ /settings.php last;
     }
+
     location /settings {
-        rewrite ^/settings/editUser=([0-9])+$ /settings.php/editUser=$1 break;
-        rewrite ^/settings/removeUser=([0-9])+$ /settings.php/removeUser=$1 break;
-        rewrite ^/settings\?addUser$ /settings.php?addUser break;
+        rewrite ^/settings/editUser=([0-9])+$ /settings.php/editUser=$1 last;
+        rewrite ^/settings/removeUser=([0-9])+$ /settings.php/removeUser=$1 last;
+        rewrite ^/settings\?addUser$ /settings.php?addUser last;
     }
+
     location = /login {
-        rewrite ^(.*)$ /login.php break;
+        rewrite ^(.*)$ /login.php last;
     }
+
     location /login {
-        rewrite ^/login/activate=(.*)+$ /login.php/activate=$1 break;
+        rewrite ^/login/activate=(.*)+$ /login.php/activate=$1 last;
     }
+
     location = /subcategories {
         rewrite ^(.*)$ /subcategories.php;
     }
+
     location /subcategories {
-        rewrite ^/subcategories/([0-9]+)$ /inventory.php?subcategory=$1 break;
+        rewrite ^/subcategories/([0-9]+)$ /inventory.php?subcategory=$1 last;
     }
+
+	# deny access to .htaccess files, if Apache's document root
+	# concurs with nginx's one
+	#
+	location ~ /\.ht {
+		deny all;
+	}
 }
