Fixing nginx route for subcategories

--- a/nginx.conf
+++ b/nginx.conf
@@ -70,7 +70,7 @@ server {
     }
 
     location = /subcategories {
-        rewrite ^(.*)$ /subcategories.php;
+        rewrite ^(.*)$ /subcategories.php last;
     }
 
     location /subcategories {
