--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
         }
     ],
 	"require": {
-		"php": ">=8.0",
-		"sergeytsalkov/meekrodb": "dev-master#8e19d9d6c331b9c5d8b90630b70b20f65dc0b903",
-		"smarty/smarty": "~4.1",
-        "smarty-gettext/smarty-gettext": "^1.6"
+		"php": ">=7.1",
+		"sergeytsalkov/meekrodb": "2.4",
+        "smarty-gettext/smarty-gettext": "^1.6",
+		"smarty/smarty": "^4.2"
 	}
 }
