Refactor index.php and index{$urlPostfix} for usage

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,8 +18,12 @@ server {
 		rewrite ^/index(.*)$ /index.php$1 last;
 	}
 
-	location /index {
-        rewrite ^/index/editItem=([0-9]+)$ /index.php?editItem=$1 last;
+    location = /entry {
+		rewrite ^/entry(.*)$ /entry.php$1 last;
+	}
+
+	location /entry {
+        rewrite ^/entry/editItem=([0-9]+)$ /entry.php?editItem=$1 last;
     }
 
     location = /items {
