--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,8 @@ RewriteEngine on
 RewriteRule (js|css|img|fonts)/(.*) $1/$2
 RewriteRule ^index$ index.php [L]
 
+RewriteRule ^welcome$ welcome.php [L]
+
 RewriteRule ^entry$ entry.php [L]
 RewriteRule ^entry/editItem=([0-9]+)$ entry.php?editItem=$1 [QSA,L]
 
