index: is now redirecting to the system wide set default page is no user specific startpage is defined settings: added option to set system wide default start page usersettings: added - user can change the password, as well as the user specific start page tools_users: added function to check password complexity requirements and to change the password of the CURRENTLY logged in user welcome: fixed including .htaccess: usersettings added Polish and English translations updated

--- a/.htaccess
+++ b/.htaccess
@@ -28,7 +28,7 @@ RewriteRule ^categories/([0-9]+)$ inventory.php?category=$1 [QSA,L]
 RewriteRule ^transfer$ transfer.php [L]
 RewriteRule ^transfer/$ transfer.php [L]
 
-RewriteRule ^api/(.*)$ api.php/$1 [QSA,L]	
+RewriteRule ^api/(.*)$ api.php/$1 [QSA,L]
 
 
 RewriteRule ^datafields$ datafields.php [L]
@@ -45,5 +45,9 @@ RewriteRule ^login/activate=(.*)+$ login.php/activate=$1 [QSA,L]
 
 RewriteRule ^subcategories/$ subcategories.php
 RewriteRule ^subcategories/([0-9]+)$ inventory.php?subcategory=$1 [QSA,L]
+
+RewriteRule ^usersettings$ usersettings.php [L]
+RewriteRule ^usersettings/$ usersettings.php [L]
+
 </IfModule>
 
