--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: "3.0"
 
+networks:
+  sqstorage:
+    name: sqstorage
+
 services:
   php:
     image: sqstorage:master
@@ -7,6 +11,10 @@ services:
     volumes:
       - "./:/app"
       - "./dba.php:/app/support/dba.php:rw"
+    working_dir: /app
+    entrypoint: ["/bin/sh", "-c", "chown -R www-data:www-data /app && php-fpm"]
+    networks:
+      - sqstorage
 
   db:
     image: mariadb:10.4
@@ -15,6 +23,8 @@ services:
       - MYSQL_USER=tlvUser
       - MYSQL_PASSWORD=tlvUser
       - MYSQL_RANDOM_ROOT_PASSWORD=yes
+    networks:
+      - sqstorage
 
   web:
     image: nginx:alpine
@@ -23,6 +33,8 @@ services:
     volumes:
       - "./nginx.conf:/etc/nginx/conf.d/default.conf"
       - "./:/app"
+    networks:
+      - sqstorage
 
 volumes:
   app:
