Adding "/item/$number$" open shortcut

--- a/.htaccess
+++ b/.htaccess
@@ -12,7 +12,8 @@ RewriteRule ^index$ index.php [L]
 RewriteRule ^welcome$ welcome.php [L]
 
 RewriteRule ^entry$ entry.php [L]
-RewriteRule ^entry/editItem=([0-9]+)$ entry.php?editItem=$1 [QSA,L]
+RewriteRule ^entry\?editItem=([0-9]+)$ entry.php?editItem=$1 [QSA,L]
+RewriteRule ^item/([0-9]+)$ entry.php?editItem=$1 [QSA,L]
 
 RewriteRule ^items/$ inventory.php [L]
 RewriteRule ^items/new$ entry.php [L]
