deploy error fixed when using portainer. nginx.conf is now integrated in a nginx image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,11 +47,13 @@ services:
       retries: 3
 
   web:
-    image: nginx:alpine
+    build:
+      context: .
+      dockerfile: nginx.Dockerfile
+#    image: nginx:alpine
     ports:
       - "1337:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - www-app:/app:ro
     depends_on:
       - php
