--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: "3.4"
 networks:
   sqstorage:
     name: sqstorage
@@ -10,18 +11,12 @@ services:
       - www-app:/app:rw
     working_dir: /app
     entrypoint: ["php-fpm", "-F"]
-    environment:
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
-      DB_NAME: ${DB_NAME}
-      DB_HOST: ${DB_HOST}
-      DB_PORT: ${DB_PORT}
-      USE_REGISTRATION: ${USE_REGISTRATION}
-      USE_PRETTY_URLS: ${USE_PRETTY_URLS}
+    env_file:
+      - .env
     depends_on:
       db:
         condition: service_healthy
-    healthcheck: # todo: add healthcheck
+    healthcheck:
       test: ["CMD", "php", "--version"]
       interval: 10s
       timeout: 5s
@@ -30,21 +25,22 @@ services:
       - sqstorage
 
   db:
-    image: mariadb:10.4
+    image: mariadb:latest
+    hostname: ${DB_HOST}
+    env_file:
+      - .env
     environment:
-      - MYSQL_DATABASE=${DB_NAME}
-      - MYSQL_USER=${DB_USER}
-      - MYSQL_PASSWORD=${DB_PASSWORD}
-      - MYSQL_RANDOM_ROOT_PASSWORD=yes
+      - MARIADB_RANDOM_ROOT_PASSWORD=1
+    healthcheck:
+      test: ["CMD", "healthcheck.sh", "--connect", "--innodb_initialized"]
+      start_period: 5s
+      interval: 10s
+      timeout: 5s
+      retries: 3
     networks:
       - sqstorage
     volumes:
       - db-data:/var/lib/mysql:rw
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "${DB_USER}", "-p${DB_PASSWORD}"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
 
   web:
     build:
@@ -53,7 +49,13 @@ services:
     ports:
       - "1337:80"
     volumes:
-      - www-app:/app:ro
+      - www-app:/app:rw
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost"]
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
     depends_on:
       - php
     networks:
