Updating routing table rules and additional improvements

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,90 +1,128 @@
-server {
-    index index.php index.html;
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
-    root /app;
+events {}
 
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+http {
+    include mime.types;
+
+    server {
+        listen 80;
+        server_name "sqstorage";
+
+        error_log /var/log/nginx/error.log;
+        access_log /var/log/nginx/access.log;
+
+        index index.php index.html;
+        root /app;
+
+        location / {
+            try_files $uri /index.php;
+            index index.php index.html;
+        }
+
+        location ~ [^/]\.php(/|$) {
+            include fastcgi_params;
+
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            try_files $fastcgi_script_name =404;
+
+            set $path_info $fastcgi_path_info;
+            fastcgi_param PATH_INFO $path_info;
+
+            fastcgi_index index.php;
+            include fastcgi.conf;
+
+            fastcgi_pass php:9000;
+            fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        }
+
+        location = /index {
+            rewrite ^/index(.*)$ /index.php$1 last;
+        }
+
+        location = /entry {
+            rewrite ^/entry(.*)$ /entry.php$1 last;
+        }
+
+        location /entry {
+            rewrite ^/entry/editItem=([0-9]+)$ /entry.php?editItem=$1 last;
+        }
+
+
+        location /item {
+            rewrite ^/item/([0-9]+)$ /entry.php?editItem=$1 last;
+        }
+
+        location = /items {
+            rewrite ^(.*)$ /inventory.php last;
+        }
+
+        location = /items/new {
+            rewrite ^(.*)$ /index.php last;
+        }
+
+        location = /inventory {
+            rewrite ^(.*)$ /inventory.php last;
+        }
+
+        location = /categories {
+            rewrite ^(.*)$ /categories.php last;
+        }
+
+        location /categories {
+            rewrite ^/categories(\?.*)$ /categories.php$1 last;
+            rewrite ^/categories/([0-9]+)$ /inventory.php?category=$1 last;
+        }
+
+        location = /transfer {
+            rewrite ^(.*)$ /transfer.php last;
+        }
+
+        location = /datafields {
+            rewrite ^(.*)$ /datafields.php last;
+        }
+
+        location = /settings {
+            rewrite ^(.*)$ /settings.php last;
+        }
+
+        location /settings {
+            rewrite ^/settings/editUser=([0-9])+$ /settings.php/editUser=$1 last;
+            rewrite ^/settings/removeUser=([0-9])+$ /settings.php/removeUser=$1 last;
+            rewrite ^/settings?addUser$ /settings.php?addUser last;
+        }
+
+        location = /api {
+            rewrite ^(.*)$ /api.php last;
+        }
+
+        location /api {
+            rewrite ^/api/(.*)$ /api.php/$1 last;
+        }
+
+        location = /login {
+            rewrite ^(.*)$ /login.php last;
+        }
+
+        location /login {
+            rewrite ^/login/activate=(.*)+$ /login.php/activate=$1 last;
+        }
+
+        location = /subcategories {
+            rewrite ^(.*)$ /subcategories.php last;
+        }
+
+        location /subcategories {
+            rewrite ^/subcategories/([0-9]+)$ /inventory.php?subcategory=$1 last;
+        }
+
+        location = /welcome {
+            rewrite ^(.*)$ /welcome.php last;
+        }
+
+        # deny access to .htaccess files, if Apache's document root
+        # concurs with nginx's one
+        #
+        location ~ /\.ht {
+            deny all;
+        }
     }
-
-    location = /index {
-		rewrite ^/index(.*)$ /index.php$1 last;
-	}
-
-    location = /entry {
-		rewrite ^/entry(.*)$ /entry.php$1 last;
-	}
-
-	location /entry {
-        rewrite ^/entry/editItem=([0-9]+)$ /entry.php?editItem=$1 last;
-    }
-
-    location = /items {
-        rewrite ^(.*)$ /inventory.php last;
-    }
-
-    location = /items/new {
-        rewrite ^(.*)$ /index.php last;
-    }
-
-    location = /inventory {
-        rewrite ^(.*)$ /inventory.php last;
-    }
-
-    location = /categories {
-        rewrite ^(.*)$ /categories.php last;
-    }
-
-    location /categories {
-        rewrite ^/categories(\?.*)$ /categories.php$1 last;
-        rewrite ^/categories/([0-9]+)$ /inventory.php?category=$1 last;
-    }
-
-    location = /transfer {
-        rewrite ^(.*)$ /transfer.php last;
-    }
-
-    location = /datafields {
-        rewrite ^(.*)$ /datafields.php last;
-    }
-
-    location = /settings {
-        rewrite ^(.*)$ /settings.php last;
-    }
-
-    location /settings {
-        rewrite ^/settings/editUser=([0-9])+$ /settings.php/editUser=$1 last;
-        rewrite ^/settings/removeUser=([0-9])+$ /settings.php/removeUser=$1 last;
-        rewrite ^/settings\?addUser$ /settings.php?addUser last;
-    }
-
-    location = /login {
-        rewrite ^(.*)$ /login.php last;
-    }
-
-    location /login {
-        rewrite ^/login/activate=(.*)+$ /login.php/activate=$1 last;
-    }
-
-    location = /subcategories {
-        rewrite ^(.*)$ /subcategories.php last;
-    }
-
-    location /subcategories {
-        rewrite ^/subcategories/([0-9]+)$ /inventory.php?subcategory=$1 last;
-    }
-
-	# deny access to .htaccess files, if Apache's document root
-	# concurs with nginx's one
-	#
-	location ~ /\.ht {
-		deny all;
-	}
 }
