--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,10 @@
     ],
 	"require": {
 		"php": ">=8.0",
-		"sergeytsalkov/meekrodb": "dev-master#8413fe472e3e737f84c780dee49d5afffb88008d",
 		"smarty/smarty": "~4.5.4",
         "smarty-gettext/smarty-gettext": "^1.7",
 		"azatoth/php-pgettext": "^1.0",
-		"mevdschee/php-crud-api": "2.14.29"
+		"mevdschee/php-crud-api": "2.14.29",
+		"sergeytsalkov/meekrodb": "^3.1"
 	}
 }
