Fix access of usersettings in nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -118,6 +118,10 @@ http {
             rewrite ^(.*)$ /welcome.php last;
         }
 
+        location = /usersettings {
+            rewrite ^(.*)$ /usersettings.php last;
+        }
+
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
         #
